@@ -249,11 +249,7 @@ describe "reading emails with attachments" do
       mail = Mail.read(fixture(File.join('emails', 'attachment_emails', 'attachment_with_encoded_name.eml')))
       expect(mail.attachments.length).to eq 1
       result = mail.attachments[0].filename
-      if RUBY_VERSION >= '1.9'
-        expected = "01 Quien Te Dij\212at. Pitbull.mp3".dup.force_encoding(result.encoding)
-      else
-        expected = "01 Quien Te Dij\212at. Pitbull.mp3"
-      end
+      expected = "01 Quien Te Dijat. Pitbull.mp3"
       expect(result).to eq expected
     end
 
